--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ saved_data/
 secrets.txt
 API Keys
 sshdungeonmind.sh
+
+# But don't ignore these specific .tar.gz files
+!images_main.tar.gz
+!images_storegenerator.tar.gz
