--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ authlib = "^1.3.2"
 python-dotenv = "^1.0.1"
 openai = "^1.53.0"
 uvicorn = "^0.32.0"
+google-cloud-firestore = "^2.19.0"
+firebase-admin = "^6.6.0"
 
 
 
