--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ openai = "^1.53.0"
 uvicorn = "^0.32.0"
 google-cloud-firestore = "^2.19.0"
 firebase-admin = "^6.6.0"
+python-multipart = "^0.0.17"
+boto3 = "^1.35.58"
+pdf2image = "^1.17.0"
 
 
 
