--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ firebase-admin = "^6.6.0"
 python-multipart = "^0.0.17"
 boto3 = "^1.35.58"
 pdf2image = "^1.17.0"
+pandas = "^2.2.3"
+numpy = "^2.1.3"
+sentence-transformers = "^3.3.0"
 
 
 
