--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ boto3 = "^1.35.58"
 pdf2image = "^1.17.0"
 pandas = "^2.2.3"
 numpy = "^2.1.3"
+torch = {version = "^2.2.0", extras = ["cpu"]}
 sentence-transformers = "^3.3.0"
 authlib = "^1.3.2"
-
+httpx = "^0.28.1" 
 
 
 
