--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ torch = {version = "^2.2.0", extras = ["cpu"]}
 sentence-transformers = "^3.3.0"
 authlib = "^1.3.2"
 httpx = "^0.28.1" 
+twilio = "^9.6.1"
 
 
 
