--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "pandas>=2.2.3",
     "numpy>=2.1.3",
     "sentence-transformers>=3.3.0",
+    "twilio>=9.0.0",
     "httpx>=0.27.0",
 ]
 
