Fix StatBlock Generator test suite
- Fix pytest.ini configuration: Change [tool:pytest] to [pytest] to properly recognize test markers
- Update schema validation test: Handle new Pydantic v2 ref structure for enums
- Fix AbilityScores validation: Handle int field alias mapping in basic validation
- All 31 unit tests now pass successfully

Fixed issues:
- slow marker not found error
- Schema test expecting inline enum vs ref structure
- AbilityScores object has no attribute int validation error

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,11 @@
 # Add directories or files to ignore during test discovery
 norecursedirs = DungeonMind/DungeonMindServer/tests/test_cloudflare.py
 pythonpath = .
+
+# Custom markers
+markers =
+    slow: marks tests as slow (may take several seconds)
+    integration: marks tests as integration tests  
+    live: marks tests that require live API calls
+    unit: marks tests as unit tests
+    asyncio: marks tests as async tests
