--- a/.gitignore
+++ b/.gitignore
@@ -54,4 +54,4 @@ checksums_storegenerator_uncompressed.txt
 checksums_storegenerator_assets_compressed.txt
 checksums_storegenerator_assets_uncompressed.txt
 copy_build.sh
-serviceAccountKey.json
+serviceAccountKey.json".env copy.development"
